Improve the NetProfits charts when click on them to show data , Still gonna fix the scrollbars inSalesHierarchyDesing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,7 +172,17 @@
   scrollbar-color: var(--border-default) transparent;
 }
 
-*::-webkit-scrollbar {
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE */
+  scrollbar-width: none;     /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  width: 0 !important;
+  display: none !important;
+}
+
+.has-scrollbar::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
